# korca-aura-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: celery_app.py  config.py  exceptions.py  limiter.py  main.py  worker.py
backend/app/api/: deps.py
backend/app/api/routes/: aura_agents.py  auth.py  backup.py  clients.py  documents.py  evaluation.py  events.py  health.py  notifications.py  routing.py  search.py  teamwork_import.py  tickets.py  (+1 more)
backend/app/db/: connection.py  schema.py
backend/app/models/: document.py  search.py  user.py
backend/app/services/: _http.py  aura_agent.py  aura_routing.py  aura_tracing.py  auth.py  embeddings.py  gatekeeper.py  job_status.py  llm.py  notifications.py  pdf.py  redis_cache.py  redis_lock.py  redis_pubsub.py  storage.py  teamwork.py  teamwork_import_status.py  teamwork_sync.py  usage.py
backend/tests/: conftest.py  fake_gemini.py  test_guardrail.py  test_worker_aura_recovery.py  test_worker_skill_generation.py  test_worker_teamwork_import.py
backend/tests/test_api/: test_aura_agents.py  test_auth.py  test_backup.py  test_clients.py  test_documents.py  test_domain_exception_handlers.py  test_evaluation.py  test_health.py  test_import_aura_route.py  test_import_route.py  test_neo4j_exception_handlers.py  test_rate_limiting.py  test_search.py  test_security_hardening.py  test_teamwork_purge_blocked.py  test_tickets.py  test_users.py
backend/tests/test_db/: test_connection.py  test_documents.py  test_expert_skills.py  test_routing_events.py  test_schema.py  test_teamwork_sync_state.py  test_ticket_list_aura_mismatch.py
backend/tests/test_services/: test_aura_routing_contracts.py  test_aura_tracing.py  test_embeddings.py  test_gatekeeper.py  test_llm.py  test_pdf.py  test_redis_cache.py  test_redis_lock.py  test_teamwork.py  test_teamwork_import_status.py  test_teamwork_sync_contracts.py  test_usage.py
(+84 files in other folders)
